Sun Feb 14 17:31:50 2016  Lars Kanis  <lars@greiz-reinsdorf.de>

	* lib/mkmf.rb (with_{cpp,c,ld}flags): copy caller strings not to
	  be modified, in append_{cpp,c,ld}flags respectively.
	  [Fix GH-1246]

Sun Feb 14 16:18:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (setup_exception): set the cause only if it is explicitly
	  given or not set yet.  [Bug #12068]

Sat Feb 13 21:44:58 2016  Tanaka Akira  <akr@fsij.org>

	* hash.c (rb_hash_invert): [DOC] more examples.

Sat Feb 13 17:30:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#find_proxy): support CIDR in
	  no_proxy.  [ruby-core:73769] [Feature#12062]

Sat Feb 13 17:11:58 2016  Fabian Wiesel  <fabian.wiesel@sap.com>

	* lib/uri/generic.rb (find_proxy): exclude white-spaces and allow
	  for a leading dot in the domain name in no_proxy.
	  [ruby-core:54542] [Feature #8317]

Fri Feb 12 12:20:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_initialize, nometh_err_initialize): [DOC] fix
	  argument positions.  optional parameters except for the message
	  are placed at the last.

Fri Feb 12 11:49:49 2016  Anthony Dmitriyev  <antstorm@gmail.com>

	* net/ftp.rb: add NullSocket#closed? to fix closing not opened
	  connection.  [Fix GH-1232]

Fri Feb 12 11:17:38 2016  Bogdan  <bogdanvlviv@gmail.com>

	* re.c (rb_reg_initialize_m): [DOC] fix missing right bracket.
	  [Fix GH-1243]

Thu Feb 11 14:57:58 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF, RUBY_DEFINT): fix for types
	  which are conditionally available depending on architectures
	  when universal binary, e.g., __int128.

Thu Feb 11 06:26:18 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (RUBY_DEFINT): use Parameter Expansion.

Thu Feb 11 05:33:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (int128_t): don't check HAVE_XXX (for example
	  HAVE___INT128) because RUBY_CHECK_SIZEOF() don't define it for