@@ -1,3 +1,8 @@
+Mon Feb 15 14:43:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/unicode/case-folding.rb: Added debugging option
+	  (with Kimihito Matsui)
+
 Sun Feb 14 17:31:50 2016  Lars Kanis  <lars@greiz-reinsdorf.de>
 
 	* lib/mkmf.rb (with_{cpp,c,ld}flags): copy caller strings not to
@@ -87,7 +92,7 @@ Mon Feb  8 20:43:57 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* string.c, enc/unicode.c: Disassociating ONIGENC_CASE_FOLD flag from
 	  ONIGENC_CASE_DOWNCASE.
-	(with Kimihito Matsui)
+	  (with Kimihito Matsui)
 
 Mon Feb  8 13:00:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
@@ -132,7 +137,6 @@ Sun Feb  7 11:44:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 	* enc/unicode/case-folding.rb: New classes CaseMapping/CaseMappingDummy
 	  to pass as parameters; not yet implemented or used.
 	(with Kimihito Matsui)
-
 
 Sun Feb  7 11:16:00 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
